--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <div id="chat-container"></div>
+      <div id="chat_container"></div>
       <form>
         <textarea
           name="prompt"
@@ -17,7 +17,9 @@
           rows="1"
           placeholder="Ask Codex..."
         ></textarea>
-        <button type="submit"><img src="assets/send.svg" alt="send" /></button>
+        <button class="submitBtn" type="submit">
+          <img src="assets/send.svg" alt="send" />
+        </button>
       </form>
     </div>
     <script type="module" src="/script.js"></script>
